--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -2,13 +2,14 @@
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
-	<title>Adalab Web Starter Kit</title>
+	<title>Anonymous proxy</title>
 	<link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
   <div class="page">
     <partial src="_header.html" label="Header"></partial>
     <partial src="_main.html" label="Main"></partial>
+    <partial src="_footer.html" label="Footer"></partial>
   </div>
 </body>
 </html>
