--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -1,6 +1,11 @@
-@import 'core/settings';
+@import 'core/variables';
 
-body {
-	background: url('../images/logo-adalab-80px.png') center center no-repeat $color-white;
-	height: 100vh;
+@import 'layout/header';
+
+@import 'layout/footer';
+
+@import 'layout/grid';
+
+.pages {
+    background-color: pink;
 }
