--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -3,10 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Anonymous proxy</title>
-	<link rel="stylesheet" href="assets/css/main.css">
+	<link rel="stylesheet" href="../assets/scss/main.scss">
 </head>
 <body>
   <div class="page">
+    hola mundo
     <partial src="_header.html" label="Header"></partial>
     <partial src="_main.html" label="Main"></partial>
     <partial src="_footer.html" label="Footer"></partial>
