--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -2,8 +2,10 @@
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
-	<title>Anonymous proxy</title>
-	<link rel="stylesheet" href="../assets/scss/main.scss">
+  <title>Anonymous proxy</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+	<link rel="stylesheet" href="assets/scss/main.scss">
 </head>
 <body>
   <div class="page">
