--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -5,7 +5,7 @@
   <title>Anonymous proxy</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-	<link rel="stylesheet" href="assets/scss/main.scss">
+	<link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
   <div class="page">
