--- a/_src/templates/partials/_main.html
+++ b/_src/templates/partials/_main.html
@@ -1,1 +1,31 @@
-<main class="page__main">@@label</main>
+<main class="page__main">
+  <div class="container_section_1">
+    <section>
+      <h3>Insomnia tips</h3>
+      <h2>Looking through a window</h2>
+      <p>Donec accusam, nulla ut volutpat porttitor, quam oidio tempus felis, at luctus ex diam nec lectus. Vivamus
+        semper sodales rutrum</p>
+    </section>
+    <a href="">Go</a>
+  </div>
+  <div class="container_section_2">
+    <section>
+      <h2>3 Reasons to purchase</h2>
+      <ul>
+        <li>
+          <h3>Ut sed metus</h3>
+          <p>Lorem ipsum dolor sit amet, consecteur.</p>
+        </li>
+        <li>
+          <h3>Curabitur ac erat</h3>
+          <p>Mauris mattis urna quis lorem molestie.</p>
+        </li>
+        <li>
+          <h3>Morbi dictum</h3>
+          <p>Aliquam in dolor et dolor tincidunt.</p>
+        </li>
+      </ul>
+    </section>
+    <a href="">More reasons</a>
+  </div>
+</main>
