Create imports in main

--- a/_src/templates/partials/_footer.html
+++ b/_src/templates/partials/_footer.html
@@ -4,6 +4,6 @@
     </div>
     <div>
         <p>&copy;2017</p>
-        <p>We <img src="" alt="">components</p>
+        <p>We <img src="" alt="corazón">components</p>
     </div>
 </footer>
