--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -1,7 +1,20 @@
-
-.page {
-    background-color: red;
-    height: 100px;
-    width: 100px;
-    
+* {
+    box-sizing: border-box;
+    margin:0;
+    padding: 0;
 }
+
+body {
+    background-color: white;
+    color: black;
+    font-size: 20px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: normal;
+}
+
+@import 'core/variables';
+@import 'components/typography';
+@import 'layout/header';
+@import 'layout/main';
+@import 'layout/footer';
+@import 'layout/grid';
