Header styles without center text

--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
 	<meta charset="UTF-8">
   <title>Anonymous proxy</title>
@@ -9,7 +9,6 @@
 </head>
 <body>
   <div class="page">
-    hola mundo
     <partial src="_header.html" label="Header"></partial>
     <partial src="_main.html" label="Main"></partial>
     <partial src="_footer.html" label="Footer"></partial>
