--- a/_src/templates/partials/_header.html
+++ b/_src/templates/partials/_header.html
@@ -1,17 +1,15 @@
 <header class="page__header">
-  
+
   <div class="buttom_menu">
-    <a href=""><img src="assets/images/ico-menu.svg" alt="Icono de menú">
+    <a class="link-menu" href=""><img class="image_menu" src="assets/images/ico-menu.svg" alt="Icono de menú">
     </a>
   </div>
 
   <div class="title_web">
     <h1 class="principal_title">Anonymous proxy</h1>
-    <p>In hac habitasse platea dictumst.</p>
+    <p class="principal_paragraph">In hac habitasse platea dictumst.</p>
+    <div class="arrow_continue">
+      <a href=""><img src="assets/images/ico-scroll-down.svg" alt="Icono de scroll para abajo"></a>
+    </div>
   </div>
-
-  <div class="arrow_continue">
-    <a href=""><img src="assets/images/ico-scroll-down.svg" alt="Icono de scroll para abajo"></a>
-  </div>
-
 </header>
