--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -1,3 +1,9 @@
+@import 'core/variables';
+@import 'components/typography';
+@import 'layout/header';
+@import 'layout/footer';
+@import 'layout/grid';
+
 * {
     box-sizing: border-box;
     margin:0;
@@ -8,13 +14,7 @@ body {
     background-color: white;
     color: black;
     font-size: 20px;
-    font-family: 'Roboto', sans-serif;
+    font-family: $font-family;
     font-weight: normal;
 }
 
-@import 'core/variables';
-@import 'components/typography';
-@import 'layout/header';
-@import 'layout/main';
-@import 'layout/footer';
-@import 'layout/grid';
