--- a/_src/templates/partials/_header.html
+++ b/_src/templates/partials/_header.html
@@ -9,7 +9,7 @@
     <h1 class="principal_title">Anonymous proxy</h1>
     <p class="principal_paragraph">In hac habitasse platea dictumst.</p>
     <div class="arrow_continue">
-      <a href=""><img src="assets/images/ico-scroll-down.svg" alt="Icono de scroll para abajo"></a>
+      <a class="link_bottom" href=""><img src="assets/images/ico-scroll-down.svg" alt="Icono de scroll para abajo"></a>
     </div>
   </div>
 </header>
