Add files to main part of the web

--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -1,6 +1,7 @@
 @import 'core/variables';
 @import 'components/typography';
 @import 'layout/header';
+@import 'layout/main';
 @import 'layout/footer';
 @import 'layout/grid';
 
