First part of main done

--- a/_src/assets/scss/components/_typography.scss
+++ b/_src/assets/scss/components/_typography.scss
@@ -2,8 +2,15 @@ $font-family: 'Roboto', sans-serif;
 
 $font-size-primary: 42px;
 $font-size-secondary: 16px;
+$font-size-tertiary: 14px;
+$font-size-quaternary: 24px;
+$font-size-quinary: 18px;
+$font-size-sexagenarian: 20px; 
 
 $font-weight-primary: bold;
 $font-weight-secondary: regular;
+$font-weight-tertiary: medium;
 
 $line-height-primary: 55px;
+$line-height-secondary: 30px;
+$line-height-tertiary: 45px;
