--- a/_src/assets/scss/core/_variables.scss
+++ b/_src/assets/scss/core/_variables.scss
@@ -2,6 +2,8 @@ $color-primary: #000000;
 $color-secondary: #304268;
 $color-tertiary: #4a4a4a;
 $color-quaternary: white;
+$color-quinary: #8ccbea;
+$color-sexagenarian:  #f26002;
 
 $background-color-primary: #ffffff;
 $background-color-secondary:  #304268;
