--- a/_src/templates/partials/_main.html
+++ b/_src/templates/partials/_main.html
@@ -1,12 +1,12 @@
 <main class="page__main">
   <div class="container_section_1">
-    <section>
-      <h3>Insomnia tips</h3>
-      <h2>Looking through a window</h2>
-      <p>Donec accusam, nulla ut volutpat porttitor, quam oidio tempus felis, at luctus ex diam nec lectus. Vivamus
+    <article>
+      <h3 class="little_title">Insomnia tips</h3>
+      <h2 class="main_title_article">Looking through a window</h2>
+      <p class="description">Donec accusam, nulla ut volutpat porttitor, quam oidio tempus felis, at luctus ex diam nec lectus. Vivamus
         semper sodales rutrum</p>
-    </section>
-    <a href="">Go</a>
+      </article>
+    <a class="go_buttom"href="">Go</a>
   </div>
   <div class="container_section_2">
     <section>
