--- a/_src/templates/partials/_main.html
+++ b/_src/templates/partials/_main.html
@@ -10,22 +10,24 @@
   </div>
   <div class="container_section_2">
     <section>
-      <h2>3 Reasons to purchase</h2>
+      <h2 class="title_section_2">3 Reasons to purchase</h2>
       <ul>
         <li>
-          <h3>Ut sed metus</h3>
-          <p>Lorem ipsum dolor sit amet, consecteur.</p>
+          <h3 class="title_reason">Ut sed metus</h3>
+          <p class="reason">Lorem ipsum dolor sit amet, consecteur.</p>
         </li>
         <li>
-          <h3>Curabitur ac erat</h3>
-          <p>Mauris mattis urna quis lorem molestie.</p>
+          <h3 class="title_reason">Curabitur ac erat</h3>
+          <p class="reason">Mauris mattis urna quis lorem molestie.</p>
         </li>
         <li>
-          <h3>Morbi dictum</h3>
-          <p>Aliquam in dolor et dolor tincidunt.</p>
+          <h3 class="title_reason">Morbi dictum</h3>
+          <p class="reason">Aliquam in dolor et dolor tincidunt.</p>
         </li>
       </ul>
     </section>
-    <a href="">More reasons</a>
+    <div class="container_link_reasons">
+      <a class="link_reasons" href="">More reasons</a>
+    </div>
   </div>
 </main>
