--- a/_src/assets/scss/components/_typography.scss
+++ b/_src/assets/scss/components/_typography.scss
@@ -1,4 +1,5 @@
-$font-family: 'Roboto', sans-serif;
+$font-family-primary: 'Roboto', sans-serif;
+$font-family-secondary: 'Roboto Slab', serif;
 
 $font-size-primary: 42px;
 $font-size-secondary: 16px;
