--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -15,7 +15,7 @@ body {
     background-color: white;
     color: black;
     font-size: 20px;
-    font-family: $font-family;
+    font-family: $font-family-primary;
     font-weight: normal;
 }
 
