Add styles footer without justify content

--- a/_src/templates/partials/_footer.html
+++ b/_src/templates/partials/_footer.html
@@ -1,9 +1,9 @@
 <footer class="page_footer">
-    <div>
+    <div class="arrow_bottom">
         <a href=""><img src="assets/images/ico-arrow.svg" alt="arrow to top"></a>
     </div>
-    <div>
-        <p>&copy;2017</p>
-        <p>We <img src="" alt="corazón">components</p>
+    <div class="container_text_footer">
+        <p class="text_footer">&copy;2017</p>
+        <p class="text_footer">We <em class="heart"> &#x2764;</em> components</p>
     </div>
 </footer>
