--- a/_src/templates/partials/_main.html
+++ b/_src/templates/partials/_main.html
@@ -11,16 +11,16 @@
   <div class="container_section_2">
     <section>
       <h2 class="title_section_2">3 Reasons to purchase</h2>
-      <ul>
-        <li>
+      <ul class="list">
+        <li class="item_1">
           <h3 class="title_reason">Ut sed metus</h3>
           <p class="reason">Lorem ipsum dolor sit amet, consecteur.</p>
         </li>
-        <li>
+        <li class="item_2">
           <h3 class="title_reason">Curabitur ac erat</h3>
           <p class="reason">Mauris mattis urna quis lorem molestie.</p>
         </li>
-        <li>
+        <li class="item_3">
           <h3 class="title_reason">Morbi dictum</h3>
           <p class="reason">Aliquam in dolor et dolor tincidunt.</p>
         </li>
