Section 2 in main with grid ok

--- a/_src/templates/partials/_main.html
+++ b/_src/templates/partials/_main.html
@@ -3,31 +3,32 @@
     <article>
       <h3 class="little_title">Insomnia tips</h3>
       <h2 class="main_title_article">Looking through a window</h2>
-      <p class="description">Donec accusam, nulla ut volutpat porttitor, quam oidio tempus felis, at luctus ex diam nec lectus. Vivamus
+      <p class="description">Donec accusam, nulla ut volutpat porttitor, quam oidio tempus felis, at luctus ex diam nec
+        lectus. Vivamus
         semper sodales rutrum</p>
-      </article>
-    <a class="go_buttom"href="">Go</a>
+    </article>
+    <a class="go_buttom" href="">Go</a>
   </div>
-  <div class="container_section_2">
-    <section>
-      <h2 class="title_section_2">3 Reasons to purchase</h2>
-      <ul class="list">
-        <li class="item_1">
-          <h3 class="title_reason">Ut sed metus</h3>
-          <p class="reason">Lorem ipsum dolor sit amet, consecteur.</p>
-        </li>
-        <li class="item_2">
-          <h3 class="title_reason">Curabitur ac erat</h3>
-          <p class="reason">Mauris mattis urna quis lorem molestie.</p>
-        </li>
-        <li class="item_3">
-          <h3 class="title_reason">Morbi dictum</h3>
-          <p class="reason">Aliquam in dolor et dolor tincidunt.</p>
-        </li>
-      </ul>
-    </section>
+
+  <section class="container_section_2">
+    <h2 class="title_section_2">3 Reasons to purchase</h2>
+    <ul class="list">
+      <li class="item">
+        <h3 class="title_reason">Ut sed metus</h3>
+        <p class="reason">Lorem ipsum dolor sit amet, consecteur.</p>
+      </li>
+      <li class="item">
+        <h3 class="title_reason">Curabitur ac erat</h3>
+        <p class="reason">Mauris mattis urna quis lorem molestie.</p>
+      </li>
+      <li class="item">
+        <h3 class="title_reason">Morbi dictum</h3>
+        <p class="reason">Aliquam in dolor et dolor tincidunt.</p>
+      </li>
+    </ul>
+
     <div class="container_link_reasons">
       <a class="link_reasons" href="">More reasons</a>
     </div>
-  </div>
+  </section>
 </main>
