--- a/_src/assets/scss/layout/_main.scss
+++ b/_src/assets/scss/layout/_main.scss
@@ -45,11 +45,8 @@
 
 .container_section_2 {
     width: 320px;
-    max-height: 100vh;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
-    text-align: center;
+    min-height: 624px;
+    background-color: #eff9ff;
 }
 
 .title_section_2 {
@@ -58,24 +55,14 @@
     font-size: $font-size-quaternary;
     font-weight: $font-weight-primary;
     line-height: $line-height-secondary;
-    padding-top: 30px;
-    padding-bottom: 45px;
-    grid-column-start: auto;
+    padding: 30px 15px 0 15px;;
+    text-align: center;
 }
 
-.item_1 {
-    grid-column-start: 2 / 3;
-    padding-bottom: auto;
-}
-
-.item_2 {
-    grid-column-start: 3 / 4;
-    padding-bottom: auto;
-}
-
-.item_3 {
-    grid-column-start: 4 / 5;
-    padding-bottom: auto;
+.item {
+    margin: 45px 70px 0 70px;
+    text-align: center;
+    list-style-type: none;
 }
 
 .title_reason {
@@ -86,7 +73,6 @@
     line-height: $line-height-secondary;
     width: 184px;
     height: 30px;
-    margin-bottom: 2px;
 }
 
 .reason {
@@ -103,8 +89,8 @@
     border-radius: 22.5px;
     background-color: $background-color-tertiary; 
     text-align: center;
-    grid-column-start: auto;
-    
+    padding-top: 10px;
+    margin: 45px 68px 60px 68px;
 }
 
 .link_reasons {
