Main completed in mobile version

--- a/_src/templates/partials/_main.html
+++ b/_src/templates/partials/_main.html
@@ -7,7 +7,9 @@
         lectus. Vivamus
         semper sodales rutrum</p>
     </article>
-    <a class="go_buttom" href="">Go</a>
+    <div class="go_buttom">
+      <a class="go_link" href="">Go</a>
+    </div>
   </div>
 
   <section class="container_section_2">
