--- a/_src/assets/scss/layout/_main.scss
+++ b/_src/assets/scss/layout/_main.scss
@@ -14,7 +14,6 @@
     font-size: $font-size-tertiary;
     font-weight: $font-weight-secondary;
     height: 30px;
-    width: 90px;
 }
 
 .main_title_article {
@@ -33,14 +32,19 @@
 }
 
 .go_buttom {
-    text-decoration: none;
-    color: $color-sexagenarian;
+    text-decoration: none; 
     border: 2px solid $color-sexagenarian;
     border-radius: 22.5px;
     width: 76px;
     height: 45px;
     text-align: center;
     margin-top: 30px;
+    padding-top: 10px;
+}
+
+.go_link {
+    text-decoration: none;
+    color: $color-sexagenarian;
 }
 
 .container_section_2 {
