--- a/_src/assets/scss/layout/_header.scss
+++ b/_src/assets/scss/layout/_header.scss
@@ -9,7 +9,8 @@
     height: 44px;
     width: 44px;
     background-color: $background-color-quarternary;
-    position: absolute;
+    position: fixed;
+    z-index: 1;
     left:0;
     top:0;
     text-align: center;
