--- a/_src/templates/partials/_footer.html
+++ b/_src/templates/partials/_footer.html
@@ -4,6 +4,6 @@
     </div>
     <div class="container_text_footer">
         <p class="text_footer">&copy;2017</p>
-        <p class="text_footer">We <em class="heart"> &#x2764;</em> components</p>
+        <p class="text_footer">we <strong class="heart"> &#x2764;</strong> components</p>
     </div>
 </footer>
