Add links to buttoms

--- a/_src/templates/partials/_main.html
+++ b/_src/templates/partials/_main.html
@@ -1,4 +1,4 @@
-<main class="page__main">
+<main id="main" class="page__main">
   <div class="container_section_1">
     <article>
       <h3 class="little_title">Insomnia tips</h3>
