--- a/_src/templates/partials/_footer.html
+++ b/_src/templates/partials/_footer.html
@@ -1,6 +1,6 @@
 <footer class="page_footer">
     <div class="arrow_bottom">
-        <a href=""><img src="assets/images/ico-arrow.svg" alt="arrow to top"></a>
+        <a href="#top"><img src="assets/images/ico-arrow.svg" alt="arrow to top"></a>
     </div>
     <div class="container_text_footer">
         <p class="text_footer">&copy;2017</p>
