--- a/_src/assets/scss/layout/_header.scss
+++ b/_src/assets/scss/layout/_header.scss
@@ -1,7 +1,7 @@
 .page__header {
     background-image: url('/assets/images/cover.jpg');
     background-size: cover;
-    width: 100%;
+    min-width: 100vw;
     height: 568px;
 }
 
@@ -26,13 +26,15 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
+    align-items: center;
     height: 100%;
-    width: 290px;
+    width: 100%;
     text-align: center;
 }
 
 .principal_title {
     color: $color-quaternary;
+    font-family: $font-family-secondary;
     font-size: $font-size-primary;
     font-weight: $font-weight-primary;
     line-height: $line-height-primary;
@@ -41,10 +43,14 @@
 }
 
 .principal_paragraph {
-   color: $color-quaternary; 
+   display: inline-block;
+    color: $color-quaternary;
+    font-family: $font-family-primary; 
    font-size: $font-size-secondary;
    font-weight: $font-weight-secondary;
    padding: 0 15px;
+   margin: 10px 0 45px 0;
+   
 }
 
 .arrow_continue {
@@ -52,10 +58,26 @@
     border-radius: 50%; 
     width: 45px;
     height: 45px;
-    margin: 53px 137px 53px 138px;
+    margin-bottom: 53px;
 }
 
 .link_bottom {
     display: inline-block;
     padding-top: 12px;
+}
+
+/*Estilos definidos para Tablet*/
+
+@media all and (min-width: 768px) {
+    .page__header {
+        width: 100vw;
+    }
+    .principal_title {
+        font-size: 80px;
+        line-height: 106px;
+    }
+
+    .principal_paragraph {
+        font-size: 24px;
+    }
 }
