Indent code and add few commentaries

--- a/_src/assets/scss/components/_typography.scss
+++ b/_src/assets/scss/components/_typography.scss
@@ -1,3 +1,5 @@
+/*order of the variables according to their appearance*/
+
 $font-family-primary: 'Roboto', sans-serif;
 $font-family-secondary: 'Roboto Slab', serif;
 
