--- a/_src/assets/scss/core/_variables.scss
+++ b/_src/assets/scss/core/_variables.scss
@@ -1,3 +1,5 @@
+/*order of the variables according to their appearance*/
+
 $color-primary: #000000;
 $color-secondary: #304268;
 $color-tertiary: #4a4a4a;
