--- a/_src/assets/scss/layout/_header.scss
+++ b/_src/assets/scss/layout/_header.scss
@@ -43,13 +43,13 @@
 }
 
 .principal_paragraph {
-   display: inline-block;
+    display: inline-block;
     color: $color-quaternary;
     font-family: $font-family-primary; 
-   font-size: $font-size-secondary;
-   font-weight: $font-weight-secondary;
-   padding: 0 15px;
-   margin: 10px 0 45px 0;
+    font-size: $font-size-secondary;
+    font-weight: $font-weight-secondary;
+    padding: 0 15px;
+    margin: 10px 0 45px 0;
    
 }
 
@@ -66,7 +66,7 @@
     padding-top: 12px;
 }
 
-/*Estilos definidos para Tablet*/
+/*Styles for tablet*/
 
 @media all and (min-width: 768px) {
     .page__header {
