--- a/_src/assets/scss/layout/_main.scss
+++ b/_src/assets/scss/layout/_main.scss
@@ -6,7 +6,7 @@
     margin-bottom: 45px;
     padding: 0 15px;
     height: 376px;
-    width: 320px;
+    max-width: 100vw;
 }
 
 .little_title {
@@ -58,7 +58,7 @@
 }
 
 .container_section_2 {
-    width: 320px;
+    max-width: 100vw;
     min-height: 624px;
     background-color: #eff9ff;
 }
@@ -122,7 +122,12 @@
 /*Styles for tablet*/
 
 @media all and (min-width: 768px) {
-
+    .container_section_1 {
+        padding: 30px 39px 60px 39px;
+        margin: 0;
+        height: 100%;
+    }
+    
     .little_title {
         font-size: $font-size-tertiary;
     }
@@ -137,6 +142,7 @@
 
     .go_buttom {
         width: 91px;
+
     }
 
     .title_section_2 {
