--- a/_src/templates/partials/_main.html
+++ b/_src/templates/partials/_main.html
@@ -1,5 +1,5 @@
 <main id="main" class="page__main">
-  <div class="container_section_1">
+  <section class="container_section_1">
     <article>
       <h3 class="little_title">Insomnia tips</h3>
       <h2 class="main_title_article">Looking through a window</h2>
@@ -10,7 +10,7 @@
     <div class="go_buttom">
       <a class="go_link" href="">Go</a>
     </div>
-  </div>
+  </section>
 
   <section class="container_section_2">
     <h2 class="title_section_2">3 Reasons to purchase</h2>
