Footer in tablet version ok

--- a/_src/assets/scss/layout/_footer.scss
+++ b/_src/assets/scss/layout/_footer.scss
@@ -17,6 +17,10 @@
     transform: translateY(-50%);
 }
 
+.container_text_footer {
+    margin-bottom: 30px;
+}
+
 .text_footer {
     color: $color-quaternary;
     font-family: $font-family-primary;
