Remove a few elements a without function

--- a/_src/templates/partials/_main.html
+++ b/_src/templates/partials/_main.html
@@ -8,7 +8,7 @@
         semper sodales rutrum</p>
     </article>
     <div class="go_buttom">
-      <a class="go_link" href="">Go</a>
+      Go
     </div>
   </section>
 
@@ -30,7 +30,7 @@
     </ul>
 
     <div class="container_link_reasons">
-      <a class="link_reasons" href="">More reasons</a>
+      More reasons
     </div>
   </section>
 </main>
