--- a/_src/templates/partials/_main.html
+++ b/_src/templates/partials/_main.html
@@ -3,7 +3,7 @@
     <article>
       <h3 class="little_title">Insomnia tips</h3>
       <h2 class="main_title_article">Looking through a window</h2>
-      <p class="description">Donec accusam, nulla ut volutpat porttitor, quam oidio tempus felis, at luctus ex diam nec
+      <p class="description">Donec accumsan, nulla ut volutpat porttitor, quam oidio tempus felis, at luctus ex diam nec
         lectus. Vivamus
         semper sodales rutrum</p>
     </article>
