Transition go oket

--- a/_src/assets/scss/layout/_main.scss
+++ b/_src/assets/scss/layout/_main.scss
@@ -53,6 +53,8 @@
 
 .go_buttom:hover {
     border: 5px solid $color-sexagenarian;
+    font-weight: bold;
+    padding-top: 6px;
 }
 
 .container_section_2 {
