Review and changes of margin

--- a/_src/assets/scss/layout/_header.scss
+++ b/_src/assets/scss/layout/_header.scss
@@ -79,6 +79,11 @@
 
     .principal_paragraph {
         font-size: $font-size-quaternary;
+        margin-top: 20px;
+    }
+    
+    .arrow_continue {
+        margin: 30px 0 45px 0;
     }
 }
 
