--- a/_src/templates/partials/_header.html
+++ b/_src/templates/partials/_header.html
@@ -1,7 +1,7 @@
 <header id="top" class="page__header">
 
   <div class="buttom_menu">
-    <a class="link-menu" href="#main"><img class="image_menu" src="assets/images/ico-menu.svg" alt="Icono de menú">
+    <a class="link-menu" href="#anchor_main"><img class="image_menu" src="assets/images/ico-menu.svg" alt="Icono de menú">
     </a>
   </div>
 
