--- a/_src/templates/partials/_main.html
+++ b/_src/templates/partials/_main.html
@@ -1,4 +1,5 @@
 <main id="main" class="page__main">
+  <div id="anchor_main" class="anchor"></div>
   <section class="container_section_1">
     <article>
       <h3 class="little_title">Insomnia tips</h3>
