--- a/_src/assets/scss/layout/_footer.scss
+++ b/_src/assets/scss/layout/_footer.scss
@@ -16,9 +16,10 @@
     position: relative;
     transform: translateY(-50%);
     animation-name: intro;
-    animation-duration: 10s;
+    animation-duration: 1s;
     animation-iteration-count: 1;
     animation-direction: alternate;
+    animation-iteration-count: infinite;
 }
 
 @keyframes intro {
@@ -31,8 +32,7 @@
 }
 
 .arrow_bottom:hover {
-    transform: translateY(-100%);
-    animation: 10s linear intro;
+    animation-play-state: paused;
 }
 
 .container_text_footer {
