--- a/_src/assets/scss/layout/_main.scss
+++ b/_src/assets/scss/layout/_main.scss
@@ -1,251 +1,250 @@
 .anchor {
-    position: relative;
-    z-index: 0;
-    top: -50px;
-    left: 0;
+  position: relative;
+  z-index: 0;
+  top: -50px;
+  left: 0;
 }
 
 .container_section_1 {
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: left;
-    margin-top: 30px;
-    margin-bottom: 45px;
-    padding: 0 15px;
-    max-height: 376px;
-    max-width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: left;
+  margin-top: 30px;
+  margin-bottom: 45px;
+  padding: 0 15px;
+  max-height: 376px;
+  max-width: 100vw;
 }
 
 .little_title {
-    color: $color-quinary;
-    font-family: $font-family-primary;
-    font-size: $font-size-tertiary;
-    font-weight: $font-weight-secondary;
-    height: 25px;
-    text-transform: capitalize;
+  color: $color-quinary;
+  font-family: $font-family-primary;
+  font-size: $font-size-tertiary;
+  font-weight: $font-weight-secondary;
+  height: 25px;
+  text-transform: capitalize;
 }
 
 .main_title_article {
-    color: $color-primary;
-    font-family: $font-family-secondary;
-    font-size: $font-size-quaternary;
-    line-height: $line-height-secondary;
-    font-weight: $font-weight-primary;
-    padding-bottom: 15px;
-    text-transform: capitalize;
+  color: $color-primary;
+  font-family: $font-family-secondary;
+  font-size: $font-size-quaternary;
+  line-height: $line-height-secondary;
+  font-weight: $font-weight-primary;
+  padding-bottom: 15px;
+  text-transform: capitalize;
 }
 
 .description {
-    color: $color-tertiary;
-    font-family: $font-family-primary;
-    font-size: $font-size-quinary;
-    line-height: $line-height-secondary;
-    font-weight: $font-weight-secondary;
+  color: $color-tertiary;
+  font-family: $font-family-primary;
+  font-size: $font-size-quinary;
+  line-height: $line-height-secondary;
+  font-weight: $font-weight-secondary;
 }
 
 .go_buttom {
-    color: $color-sexagenarian;
-    border: 2px solid $color-sexagenarian;
-    border-radius: 22.5px;
-    width: 76px;
-    height: 45px;
-    font-family: $font-family-primary;
-    font-size: $font-size-sexagenarian;
-    font-weight: $font-weight-tertiary;
-    text-align: center;
-    margin-top: 30px;
-    padding-top: 10px;
+  color: $color-sexagenarian;
+  border: 2px solid $color-sexagenarian;
+  border-radius: 22.5px;
+  width: 76px;
+  height: 45px;
+  font-family: $font-family-primary;
+  font-size: $font-size-sexagenarian;
+  font-weight: $font-weight-tertiary;
+  text-align: center;
+  margin-top: 30px;
+  padding-top: 10px;
 }
 
 .go_buttom:hover {
-    font-weight: bold;
-    border: 5px solid $color-sexagenarian;
-    padding-top: 6px;
-    cursor: pointer;
+  font-weight: bold;
+  border: 5px solid $color-sexagenarian;
+  padding-top: 6px;
+  cursor: pointer;
 }
 
 .container_section_2 {
-    max-width: 100vw;
-    min-height: 624px;
-    background-color: #eff9ff;
+  max-width: 100vw;
+  min-height: 624px;
+  background-color: #eff9ff;
 }
 
 .title_section_2 {
-    font-family: $font-family-secondary;
-    color: $color-primary;
-    font-size: $font-size-quaternary;
-    font-weight: $font-weight-primary;
-    line-height: $line-height-secondary;
-    text-transform: capitalize;
-    padding: 30px 15px 0 15px;;
-    text-align: center;
+  font-family: $font-family-secondary;
+  color: $color-primary;
+  font-size: $font-size-quaternary;
+  font-weight: $font-weight-primary;
+  line-height: $line-height-secondary;
+  text-transform: capitalize;
+  padding: 30px 15px 0 15px;
+  ;
+  text-align: center;
 }
 
 .title_section_2:hover {
-    text-decoration: underline;
-    cursor: pointer;
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 .item {
-    margin: 45px 70px 0 70px;
-    text-align: center;
-    list-style-type: none;
+  margin: 45px 70px 0 70px;
+  text-align: center;
+  list-style-type: none;
 }
 
 .title_reason {
-    font-family: $font-family-secondary;
-    color: $color-primary;
-    font-size: $font-size-quinary;
-    font-weight: $font-weight-primary;
-    line-height: $line-height-secondary;
+  font-family: $font-family-secondary;
+  color: $color-primary;
+  font-size: $font-size-quinary;
+  font-weight: $font-weight-primary;
+  line-height: $line-height-secondary;
 }
 
 .reason {
-    font-family: $font-family-primary;
-    color: $color-primary;
-    font-size: $font-size-quinary;
-    line-height: $line-height-secondary;
-    font-weight: $font-weight-secondary;
+  font-family: $font-family-primary;
+  color: $color-primary;
+  font-size: $font-size-quinary;
+  line-height: $line-height-secondary;
+  font-weight: $font-weight-secondary;
 }
 
 .container_link_reasons {
-    border-radius: 22.5px;
-    background-color: $background-color-tertiary; 
-    text-align: center;
-    text-transform: capitalize;
-    color: $color-quaternary;
-    font-family: $font-family-primary;
-    font-size: $font-size-sexagenarian;
-    font-weight: $font-weight-tertiary;
-    padding-top: 10px;
-    margin: 45px auto 60px auto;
-    width: 184px;
-    height: 45px;
+  border-radius: 22.5px;
+  background-color: $background-color-tertiary;
+  text-align: center;
+  text-transform: capitalize;
+  color: $color-quaternary;
+  font-family: $font-family-primary;
+  font-size: $font-size-sexagenarian;
+  font-weight: $font-weight-tertiary;
+  padding-top: 10px;
+  margin: 45px auto 60px auto;
+  width: 184px;
+  height: 45px;
 }
 
 .container_link_reasons:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 /*Styles for tablet*/
 
 @media all and (min-width: 768px) {
-    .anchor {
-        top: -20px;
-    }
+  .anchor {
+    top: -20px;
+  }
 
-    .container_section_1 {
-        padding: 30px 39px 60px 39px;
-        margin: 0;
-        height: 100%;
-    }
-    
-    .little_title {
-        font-size: $font-size-tertiary;
-    }
-    
-    .main_title_article {
-        font-size: 26px;
-        line-height: $line-height-tertiary;
-    }
+  .container_section_1 {
+    padding: 30px 39px 60px 39px;
+    margin: 0;
+    height: 100%;
+  }
 
-    .description {
-        font-size: $font-size-sexagenarian;
-    }
+  .little_title {
+    font-size: $font-size-tertiary;
+  }
 
-    .go_buttom {
-        width: 91px;
-    }
+  .main_title_article {
+    font-size: 26px;
+    line-height: $line-height-tertiary;
+  }
 
-    .title_section_2 {
-        font-size: 26px;
-        line-height: $line-height-tertiary;
-    }
+  .description {
+    font-size: $font-size-sexagenarian;
+  }
 
-    .title_reason {
-        font-size: $font-size-quaternary;
-        padding-right: 30px;
-    }
+  .go_buttom {
+    width: 91px;
+  }
 
-    .reason {
-        font-size: $font-size-sexagenarian; 
-    }
+  .title_section_2 {
+    font-size: 26px;
+    line-height: $line-height-tertiary;
+  }
 
-    .container_section_1, .container_section_2 {
-        width: 100%;
-    }
+  .title_reason {
+    font-size: $font-size-quaternary;
+    padding-right: 30px;
+  }
 
-    .container_section_2 {
-        min-height: 397px;
-    }
+  .reason {
+    font-size: $font-size-sexagenarian;
+  }
 
-    .list {
-        display: flex;
-        flex-direction: row;
-        align-content: center;
-        margin: 45px 40px 60px 35.7px;
-    }
+  .container_section_1,
+  .container_section_2 {
+    width: 100%;
+  }
 
-    .item {
-        margin: 0;
-    }
+  .container_section_2 {
+    min-height: 397px;
+  }
 
-    .reason {
-        margin-top: 14px;
-        margin-right: 27.7px;
-    }
+  .list {
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    margin: 45px 40px 60px 35.7px;
+  }
 
-    .container_link_reasons {
-        margin: 0 auto 60px auto;
-    }
+  .item {
+    margin: 0;
+  }
+
+  .reason {
+    margin-top: 14px;
+    margin-right: 27.7px;
+  }
+
+  .container_link_reasons {
+    margin: 0 auto 60px auto;
+  }
 }
 
 /*Styles in desktop version*/
 
 @media all and (min-width: 1200px) {
-    .anchor {
-        top: 225%;
-        left: 2%;
-    }
+  .anchor {
+    top: 225%;
+    left: 2%;
+  }
 
-    .container_section_1 {
-        max-width: 768px;
-        padding: 60px 0;
-        margin: 0 auto;
-    }
+  .container_section_1 {
+    max-width: 768px;
+    padding: 60px 0;
+    margin: 0 auto;
+  }
 
-    .little_title {
-        font-size: $font-size-secondary;
-    }
+  .little_title {
+    font-size: $font-size-secondary;
+  }
 
-    .main_title_article {
-        font-size: 32px;
-        padding-bottom: 30px;
-    }
+  .main_title_article {
+    font-size: 32px;
+    padding-bottom: 30px;
+  }
 
-    .go_buttom {
-        width: 160px;
-    }
+  .go_buttom {
+    width: 160px;
+  }
 
-    .title_section_2 {
-        font-size: 32px;
-        padding-top: 60px;
-    }
+  .title_section_2 {
+    font-size: 32px;
+    padding-top: 60px;
+  }
 
-    .container_link_reasons {
-        width: 255px;
-    }
+  .container_link_reasons {
+    width: 255px;
+  }
 
-    .list {
-        margin: 45px auto 60px auto;
-    }
+  .list {
+    margin: 45px auto 60px auto;
+  }
 
-    .reason {
-        max-width: 353.8px;
-        max-height: 68px;
-    }
+  .reason {
+    max-width: 353.8px;
+    max-height: 68px;
+  }
 }
-
-
-
