--- a/_src/assets/scss/layout/_header.scss
+++ b/_src/assets/scss/layout/_header.scss
@@ -2,7 +2,7 @@
   background-image: url('../images/cover.jpg');
   background-size: cover;
   min-width: 100vw;
-  height: 568px;
+  height: 100vh;
 }
 
 .buttom_menu {
@@ -109,9 +109,6 @@
 /*Styles for desktop*/
 
 @media all and (min-width: 1200px) {
-  .page__header {
-    min-height: 768px;
-  }
 
   .principal_title {
     font-size: 100px;
