--- a/_src/assets/scss/layout/_footer.scss
+++ b/_src/assets/scss/layout/_footer.scss
@@ -1,6 +1,6 @@
 .page_footer {
   min-height: 128px;
-  background-color: $background-color-quarternary;
+  background-color: $background-color-secondary;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -12,7 +12,7 @@
   width: 45px;
   border-radius: 50%;
   text-align: center;
-  padding-top: 15px;
+  padding-top: 10px;
   position: relative;
   transform: translateY(-50%);
   animation-name: intro;
@@ -38,28 +38,17 @@
 
 .container_text_footer {
   margin-bottom: 30px;
-  margin-top: 30px;
-  text-align: center;
 }
 
 .text_footer {
-  color: $color-primary;
+  color: $color-quaternary;
   font-family: $font-family-primary;
   font-size: $font-size-tertiary;
   line-height: $line-height-secondary;
-  
+  text-align: center;
 }
 
 .heart {
   text-decoration: none;
   color: $color-sexagenarian;
-}
-
-@media all and (min-width: 768px) {
-  .container_text_footer {
-    width: 100%;
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-between;
-  }
 }
