--- a/_src/assets/scss/layout/_header.scss
+++ b/_src/assets/scss/layout/_header.scss
@@ -1,8 +1,8 @@
 .page__header {
   background-image: url('../images/cover.jpg');
   background-size: cover;
-  min-width: 100vw;
-  height: 568px;
+  width: 100%;
+  height: 100vh;
 }
 
 .buttom_menu {
