--- a/_src/assets/scss/layout/_main.scss
+++ b/_src/assets/scss/layout/_main.scss
@@ -14,7 +14,7 @@
   margin-bottom: 45px;
   padding: 0 15px;
   max-height: 376px;
-  max-width: 100vw;
+  max-width: 100%;
 }
 
 .little_title {
@@ -56,6 +56,7 @@
   text-align: center;
   margin-top: 30px;
   padding-top: 10px;
+  transition: border ease 1s;
 }
 
 .go_buttom:hover {
